helm/argocd/extras/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: lab-gateway
      namespace: lab-gateway
      sectionName: https-argocd
  hostnames:
    - argocd.tekton-lab.test
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
